crates/engage/tests/integrations/snapshots/integrations__no_file@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit with an error saying no Engage file was found.
---

