crates/engage/tests/integrations/snapshots/integrations__one_process@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit sucessfully after running a process.
---
Some(
    0,
)
