crates/engage/tests/integrations/snapshots/integrations__one_process@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit sucessfully after running a process.
---
  ╭─┬◀ starting
a │O│ hello world
  ╰─┴▶ success
