crates/engage/tests/integrations/snapshots/integrations__one_task@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit sucessfully after running a task.
---
Some(
    0,
)
