crates/engage/tests/integrations/snapshots/integrations__one_task@stderr.snap
---
source: crates/engage/tests/integrations/main.rs
description: Should exit sucessfully after running a task.
---

