crates/engage/tests/integrations/snapshots/integrations__part_of_with_errors_dot_relaxed@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should print a graph and warnings of an Engage file using \"part-of\"."
---
Some(
    0,
)
