crates/engage/tests/integrations/snapshots/integrations__part_of_with_errors_dot_relaxed@stdout.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should print a graph and warnings of an Engage file using \"part-of\"."
---
digraph {
    0 [ label = "a" ]
    1 [ label = "b" ]
    2 [ label = "b-post" ]
    3 [ label = "b-post-post" ]
    4 [ label = "b-pre" ]
    5 [ label = "b-pre-pre" ]
    6 [ label = "c" ]
    7 [ label = "invalid-a" ]
    8 [ label = "invalid-b" ]
    9 [ label = "invalid-c" ]
    10 [ label = "invalid-d" ]
    11 [ label = "invalid-e" ]
    12 [ label = "invalid-f" ]
    13 [ label = "invalid-g" ]
    14 [ label = "invalid-h" ]
    0 -> 2 [ label = "via 'before'" ]
    0 -> 3 [ label = "via 'before'" ]
    0 -> 4 [ label = "via 'before'" ]
    0 -> 5 [ label = "via 'before'" ]
    0 -> 11 [ label = "via 'before'" ]
    0 -> 12 [ label = "via 'before'" ]
    0 -> 13 [ label = "via 'before'" ]
    0 -> 14 [ label = "via 'before'" ]
    0 -> 1 [ label = "via 'before'" ]
    1 -> 2 [ label = "via 'after'" ]
    1 -> 3 [ label = "via 'after'" ]
    2 -> 3 [ label = "via 'after'" ]
    3 -> 10 [ label = "via 'before'" ]
    3 -> 14 [ label = "via 'before'" ]
    4 -> 1 [ label = "via 'before'" ]
    8 -> 5 [ label = "via 'after'" ]
    12 -> 5 [ label = "via 'after'" ]
    5 -> 1 [ label = "via 'before'" ]
    5 -> 4 [ label = "via 'before'" ]
    2 -> 6 [ label = "via 'after'" ]
    3 -> 6 [ label = "via 'after'" ]
    4 -> 6 [ label = "via 'after'" ]
    5 -> 6 [ label = "via 'after'" ]
    11 -> 6 [ label = "via 'after'" ]
    12 -> 6 [ label = "via 'after'" ]
    13 -> 6 [ label = "via 'after'" ]
    14 -> 6 [ label = "via 'after'" ]
    1 -> 6 [ label = "via 'after'" ]
    7 -> 5 [ label = "via 'before'" ]
    3 -> 9 [ label = "via 'after'" ]
    11 -> 5 [ label = "via 'before'" ]
    3 -> 13 [ label = "via 'after'" ]
}
