crates/engage/tests/integrations/snapshots/integrations__part_of_with_errors_list_all_relaxed@status_code.snap
---
source: crates/engage/tests/integrations/main.rs
description: "Should print all processes and warnings in an Engage file using \"part-of\"."
---
Some(
    0,
)
